--- a/osx_wx3/Makefile
+++ b/osx_wx3/Makefile
@@ -10,9 +10,9 @@ LKLIB = $(LKDIR)/lkosxwx3.a
 
 CC = gcc
 CXX = g++
-CFLAGS = -g -I. -I$(SRCDIR) `wx-config-3 --cflags`
+CFLAGS = -g -I. -I$(SRCDIR) -I$(WEXDIR)/include -I$(LKDIR) -I$(SSCDIR) `wx-config-3 --cflags`
 CXXFLAGS = $(CFLAGS)
-LDFLAGS = `wx-config-3 --libs` `wx-config-3 --libs aui` `wx-config-3 --libs stc` -lm $(LKLIB) $(WEXLIB)
+LDFLAGS = `wx-config-3 --libs` `wx-config-3 --libs aui` `wx-config-3 --libs stc` -lm $(LKLIB) $(WEXLIB) -lstdc++ -lcurl
 OBJECTS = main.o \
 	simplecurl.o \
 	welcome.o \
