--- a/vc2012_wx3/SAMnt_vc2012.vcxproj
+++ b/vc2012_wx3/SAMnt_vc2012.vcxproj
@@ -15,6 +15,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\main.cpp" />
+    <ClCompile Include="..\src\object.cpp" />
+    <ClCompile Include="..\src\project.cpp" />
     <ClCompile Include="..\src\simplecurl.cpp" />
     <ClCompile Include="..\src\welcome.cpp" />
     <ClCompile Include="..\src\wxcurlbase.cpp" />
@@ -24,6 +26,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\main.h" />
+    <ClInclude Include="..\src\object.h" />
+    <ClInclude Include="..\src\project.h" />
     <ClInclude Include="..\src\simplecurl.h" />
     <ClInclude Include="..\src\welcome.h" />
     <ClInclude Include="..\src\wxcurlbase.h" />
