--- a/vc2012_wx3/SAMnt_vc2012.vcxproj.filters
+++ b/vc2012_wx3/SAMnt_vc2012.vcxproj.filters
@@ -35,6 +35,12 @@
     <ClInclude Include="..\src\simplecurl.h">
       <Filter>Source</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\project.h">
+      <Filter>Source</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\object.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\welcome.cpp">
@@ -56,6 +62,12 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\simplecurl.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\project.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\object.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
