reorganized, added variables class

--- a/osx_wx3/Makefile
+++ b/osx_wx3/Makefile
@@ -7,6 +7,7 @@ SSCDIR = ../../ssc
 
 WEXLIB = $(WEXDIR)/wexosxwx3.a
 LKLIB = $(LKDIR)/lkosxwx3.a
+SSCLIB = $(SSCDIR)/mac_dylib/ssc.dylib
 
 CC = gcc
 CXX = g++
@@ -14,6 +15,10 @@ CFLAGS = -g -I. -I$(SRCDIR) -I$(WEXDIR)/include -I$(LKDIR) -I$(SSCDIR) `wx-confi
 CXXFLAGS = $(CFLAGS)
 LDFLAGS = `wx-config-3 --libs` `wx-config-3 --libs aui` `wx-config-3 --libs stc` -lm $(LKLIB) $(WEXLIB) -lstdc++ -lcurl
 OBJECTS = main.o \
+	equation.o \
+	uiview.o \
+	uiwidgets.o \
+	variable.o \
 	project.o \
 	object.o \
 	simplecurl.o \
@@ -37,6 +42,10 @@ $(TARGET): $(OBJECTS) $(WEXLIB)
 	cp $(TARGET).icns ./$(TARGET).app/Contents/Resources
 	cp Info-$(TARGET).plist ./$(TARGET).app/Contents/Info.plist
 	echo "-n APPL????" >> ./$(TARGET).app/Contents/PkgInfo
+	@mkdir -p $(TARGET).app/Contents/Frameworks
+	cp $(SSCLIB) $(TARGET).app/Contents/Frameworks
+	install_name_tool -id @executable_path/../Frameworks/ssc.dylib $(TARGET).app/Contents/Frameworks/ssc.dylib
+	install_name_tool -change ssc.dylib @executable_path/../Frameworks/ssc.dylib $(TARGET).app/Contents/MacOS/$(TARGET)
 	
 DEPENDS = $(OBJECTS:.o=.d)
 
