--- a/osx_wx3/Makefile
+++ b/osx_wx3/Makefile
@@ -7,13 +7,13 @@ SSCDIR = ../../ssc
 
 WEXLIB = $(WEXDIR)/wexosxwx3.a
 LKLIB = $(LKDIR)/lkosxwx3.a
-SSCLIB = $(SSCDIR)/mac_dylib/ssc.dylib
+SSCLIB = $(SSCDIR)/mac_dylib/ssc64.dylib
 
 CC = gcc
 CXX = g++
 CFLAGS = -g -I. -I$(SRCDIR) -I$(WEXDIR)/include -I$(LKDIR) -I$(SSCDIR) `wx-config-3 --cflags`
 CXXFLAGS = $(CFLAGS)
-LDFLAGS = `wx-config-3 --libs` `wx-config-3 --libs aui` `wx-config-3 --libs stc` -lm $(LKLIB) $(WEXLIB) -lstdc++ -lcurl
+LDFLAGS = `wx-config-3 --libs` `wx-config-3 --libs aui` `wx-config-3 --libs stc` -lm $(LKLIB) $(WEXLIB) $(SSCLIB) -lstdc++ -lcurl
 OBJECTS = main.o \
 	equation.o \
 	uiview.o \
@@ -43,9 +43,9 @@ $(TARGET): $(OBJECTS) $(WEXLIB)
 	cp Info-$(TARGET).plist ./$(TARGET).app/Contents/Info.plist
 	echo "-n APPL????" >> ./$(TARGET).app/Contents/PkgInfo
 	@mkdir -p $(TARGET).app/Contents/Frameworks
-	cp $(SSCLIB) $(TARGET).app/Contents/Frameworks
-	install_name_tool -id @executable_path/../Frameworks/ssc.dylib $(TARGET).app/Contents/Frameworks/ssc.dylib
-	install_name_tool -change ssc.dylib @executable_path/../Frameworks/ssc.dylib $(TARGET).app/Contents/MacOS/$(TARGET)
+	cp $(SSCLIB) $(TARGET).app/Contents/Frameworks/ssc64.dylib
+	install_name_tool -id @executable_path/../Frameworks/ssc64.dylib $(TARGET).app/Contents/Frameworks/ssc64.dylib
+	install_name_tool -change ssc64.dylib @executable_path/../Frameworks/ssc64.dylib $(TARGET).app/Contents/MacOS/$(TARGET)
 	
 DEPENDS = $(OBJECTS:.o=.d)
 
