--- a/vc2012_wx3/SAMnt_vc2012.vcxproj
+++ b/vc2012_wx3/SAMnt_vc2012.vcxproj
@@ -21,12 +21,8 @@
     <ClCompile Include="..\src\simplecurl.cpp" />
     <ClCompile Include="..\src\uiview.cpp" />
     <ClCompile Include="..\src\uiwidgets.cpp" />
-    <ClCompile Include="..\src\variable.cpp" />
+    <ClCompile Include="..\src\variables.cpp" />
     <ClCompile Include="..\src\welcome.cpp" />
-    <ClCompile Include="..\src\wxcurlbase.cpp" />
-    <ClCompile Include="..\src\wxcurlftp.cpp" />
-    <ClCompile Include="..\src\wxcurlhttp.cpp" />
-    <ClCompile Include="..\src\wxcurlthread.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\equation.h" />
@@ -36,12 +32,8 @@
     <ClInclude Include="..\src\simplecurl.h" />
     <ClInclude Include="..\src\uiview.h" />
     <ClInclude Include="..\src\uiwidgets.h" />
-    <ClInclude Include="..\src\variable.h" />
+    <ClInclude Include="..\src\variables.h" />
     <ClInclude Include="..\src\welcome.h" />
-    <ClInclude Include="..\src\wxcurlbase.h" />
-    <ClInclude Include="..\src\wxcurlftp.h" />
-    <ClInclude Include="..\src\wxcurlhttp.h" />
-    <ClInclude Include="..\src\wxcurlthread.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectName>SAMnt</ProjectName>
@@ -115,10 +107,10 @@
       <AdditionalIncludeDirectories>$(WXMSW3)\lib\vc_lib\mswud;$(WXMSW3)\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>wxbase29ud_net.lib;wxbase29ud_xml.lib;wxmsw29ud_webview.lib;wxmsw29ud_adv.lib;wxmsw29ud_html.lib;wxmsw29ud_aui.lib;wxmsw29ud_stc.lib;wxmsw29ud_core.lib;wxbase29ud.lib;wxscintillad.lib;wxtiffd.lib;wxjpegd.lib;wxpngd.lib;wxzlibd.lib;wxregexud.lib;wxexpatd.lib;kernel32.lib;user32.lib;gdi32.lib;comdlg32.lib;winspool.lib;winmm.lib;shell32.lib;comctl32.lib;ole32.lib;oleaut32.lib;uuid.lib;rpcrt4.lib;advapi32.lib;wsock32.lib;wininet.lib;wexvc12wx3d.lib;lkvc12wx3d.lib;libcurl.lib;ssc.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>wxbase29ud_net.lib;wxbase29ud_xml.lib;wxmsw29ud_webview.lib;wxmsw29ud_adv.lib;wxmsw29ud_html.lib;wxmsw29ud_aui.lib;wxmsw29ud_stc.lib;wxmsw29ud_core.lib;wxbase29ud.lib;wxscintillad.lib;wxtiffd.lib;wxjpegd.lib;wxpngd.lib;wxzlibd.lib;wxregexud.lib;wxexpatd.lib;kernel32.lib;user32.lib;gdi32.lib;comdlg32.lib;winspool.lib;winmm.lib;shell32.lib;comctl32.lib;ole32.lib;oleaut32.lib;uuid.lib;rpcrt4.lib;advapi32.lib;wsock32.lib;wininet.lib;wexvc12wx3d.lib;lkvc12wx3d.lib;libcurl.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>$(TargetPath)</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <AdditionalLibraryDirectories>$(ProjectDir)\libcurl\lib;$(LKDIR);$(WEXDIR);$(WXMSW3)\lib\vc_lib;$(SSCDIR)\$(Platform)\$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(ProjectDir)\libcurl\lib;$(LKDIR);$(WEXDIR);$(WXMSW3)\lib\vc_lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <ProgramDatabaseFile>$(ProjectDir)\$(TargetName).pdb</ProgramDatabaseFile>
       <SubSystem>Windows</SubSystem>
@@ -155,10 +147,10 @@
       <AdditionalIncludeDirectories>$(WXMSW3)\lib\vc_lib\mswu;$(WXMSW3)\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>wxbase29u_net.lib;wxbase29u_xml.lib;wxmsw29u_webview.lib;wxmsw29u_adv.lib;wxmsw29u_html.lib;wxmsw29u_aui.lib;wxmsw29u_stc.lib;wxmsw29u_core.lib;wxbase29u.lib;wxscintilla.lib;wxtiff.lib;wxjpeg.lib;wxpng.lib;wxzlib.lib;wxregexu.lib;wxexpat.lib;kernel32.lib;user32.lib;gdi32.lib;comdlg32.lib;winspool.lib;winmm.lib;shell32.lib;comctl32.lib;ole32.lib;oleaut32.lib;uuid.lib;rpcrt4.lib;advapi32.lib;wsock32.lib;wininet.lib;wexvc12wx3.lib;lkvc12wx3.lib;libcurl.lib;ssc.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>wxbase29u_net.lib;wxbase29u_xml.lib;wxmsw29u_webview.lib;wxmsw29u_adv.lib;wxmsw29u_html.lib;wxmsw29u_aui.lib;wxmsw29u_stc.lib;wxmsw29u_core.lib;wxbase29u.lib;wxscintilla.lib;wxtiff.lib;wxjpeg.lib;wxpng.lib;wxzlib.lib;wxregexu.lib;wxexpat.lib;kernel32.lib;user32.lib;gdi32.lib;comdlg32.lib;winspool.lib;winmm.lib;shell32.lib;comctl32.lib;ole32.lib;oleaut32.lib;uuid.lib;rpcrt4.lib;advapi32.lib;wsock32.lib;wininet.lib;wexvc12wx3.lib;lkvc12wx3.lib;libcurl.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>$(TargetPath)</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <AdditionalLibraryDirectories>$(ProjectDir)\libcurl\lib;$(LKDIR);$(WEXDIR);$(WXMSW3)\lib\vc_lib;$(SSCDIR)\$(Platform)\$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(ProjectDir)\libcurl\lib;$(LKDIR);$(WEXDIR);$(WXMSW3)\lib\vc_lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <ProgramDatabaseFile>$(ProjectDir)\$(TargetName).pdb</ProgramDatabaseFile>
       <SubSystem>Windows</SubSystem>
