--- a/vc2012_wx3/SAMnt_vc2012.vcxproj.filters
+++ b/vc2012_wx3/SAMnt_vc2012.vcxproj.filters
@@ -17,18 +17,6 @@
     <ClInclude Include="..\src\welcome.h">
       <Filter>Source</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\wxcurlbase.h">
-      <Filter>Source</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\wxcurlftp.h">
-      <Filter>Source</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\wxcurlhttp.h">
-      <Filter>Source</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\wxcurlthread.h">
-      <Filter>Source</Filter>
-    </ClInclude>
     <ClInclude Include="..\src\main.h">
       <Filter>Source</Filter>
     </ClInclude>
@@ -50,24 +38,12 @@
     <ClInclude Include="..\src\uiwidgets.h">
       <Filter>Source</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\variable.h">
+    <ClInclude Include="..\src\variables.h">
       <Filter>Source</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\welcome.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\wxcurlbase.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\wxcurlftp.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\wxcurlhttp.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\wxcurlthread.cpp">
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\main.cpp">
@@ -91,7 +67,7 @@
     <ClCompile Include="..\src\uiwidgets.cpp">
       <Filter>Source</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\variable.cpp">
+    <ClCompile Include="..\src\variables.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
