--- a/vc2012_wx3/SAMnt_vc2012.vcxproj
+++ b/vc2012_wx3/SAMnt_vc2012.vcxproj
@@ -14,6 +14,7 @@
     <ResourceCompile Include="SAM.rc" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\case.cpp" />
     <ClCompile Include="..\src\equation.cpp" />
     <ClCompile Include="..\src\main.cpp" />
     <ClCompile Include="..\src\object.cpp" />
@@ -25,6 +26,7 @@
     <ClCompile Include="..\src\welcome.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\src\case.h" />
     <ClInclude Include="..\src\equation.h" />
     <ClInclude Include="..\src\main.h" />
     <ClInclude Include="..\src\object.h" />
