--- a/vc2012_wx3/SAMnt_vc2012.vcxproj.filters
+++ b/vc2012_wx3/SAMnt_vc2012.vcxproj.filters
@@ -44,6 +44,9 @@
     <ClInclude Include="..\src\case.h">
       <Filter>Source</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\ide.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\welcome.cpp">
@@ -74,6 +77,9 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\case.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ide.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
