basic case + casewindow creation capability

--- a/vc2012_wx3/SAMnt_vc2012.vcxproj
+++ b/vc2012_wx3/SAMnt_vc2012.vcxproj
@@ -15,6 +15,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\case.cpp" />
+    <ClCompile Include="..\src\casewin.cpp" />
     <ClCompile Include="..\src\equation.cpp" />
     <ClCompile Include="..\src\ide.cpp" />
     <ClCompile Include="..\src\main.cpp" />
@@ -28,6 +29,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\case.h" />
+    <ClInclude Include="..\src\casewin.h" />
     <ClInclude Include="..\src\equation.h" />
     <ClInclude Include="..\src\ide.h" />
     <ClInclude Include="..\src\main.h" />
