restructure variable DBs and equation DBs.

--- a/vc2013_wx3/SAMnt_vc2013.vcxproj
+++ b/vc2013_wx3/SAMnt_vc2013.vcxproj
@@ -25,7 +25,7 @@
     <ClCompile Include="..\src\basecase.cpp" />
     <ClCompile Include="..\src\case.cpp" />
     <ClCompile Include="..\src\casewin.cpp" />
-    <ClCompile Include="..\src\equation.cpp" />
+    <ClCompile Include="..\src\equations.cpp" />
     <ClCompile Include="..\src\ide.cpp" />
     <ClCompile Include="..\src\ipagelist.cpp" />
     <ClCompile Include="..\src\main.cpp" />
@@ -41,7 +41,7 @@
     <ClInclude Include="..\src\basecase.h" />
     <ClInclude Include="..\src\case.h" />
     <ClInclude Include="..\src\casewin.h" />
-    <ClInclude Include="..\src\equation.h" />
+    <ClInclude Include="..\src\equations.h" />
     <ClInclude Include="..\src\ide.h" />
     <ClInclude Include="..\src\ipagelist.h" />
     <ClInclude Include="..\src\main.h" />
