--- a/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
+++ b/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
@@ -29,9 +29,6 @@
     <ClInclude Include="..\src\object.h">
       <Filter>Source</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\uiview.h">
-      <Filter>Source</Filter>
-    </ClInclude>
     <ClInclude Include="..\src\uiwidgets.h">
       <Filter>Source</Filter>
     </ClInclude>
@@ -56,6 +53,9 @@
     <ClInclude Include="..\src\equations.h">
       <Filter>Source</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\inputpage.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\welcome.cpp">
@@ -71,9 +71,6 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\object.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\uiview.cpp">
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\uiwidgets.cpp">
@@ -98,6 +95,9 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\equations.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\inputpage.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
