added separate invoke sources for all built-in SAM LK script functions. fixed special_get/special_set for script and equation evaluation

--- a/vc2013_wx3/SAMnt_vc2013.vcxproj
+++ b/vc2013_wx3/SAMnt_vc2013.vcxproj
@@ -28,6 +28,7 @@
     <ClCompile Include="..\src\equations.cpp" />
     <ClCompile Include="..\src\ide.cpp" />
     <ClCompile Include="..\src\inputpage.cpp" />
+    <ClCompile Include="..\src\invoke.cpp" />
     <ClCompile Include="..\src\ipagelist.cpp" />
     <ClCompile Include="..\src\main.cpp" />
     <ClCompile Include="..\src\object.cpp" />
@@ -44,6 +45,7 @@
     <ClInclude Include="..\src\equations.h" />
     <ClInclude Include="..\src\ide.h" />
     <ClInclude Include="..\src\inputpage.h" />
+    <ClInclude Include="..\src\invoke.h" />
     <ClInclude Include="..\src\ipagelist.h" />
     <ClInclude Include="..\src\main.h" />
     <ClInclude Include="..\src\object.h" />
