new built-in objects, revised input page layout for exclusive pages

--- a/vc2013_wx3/SAMnt_vc2013.vcxproj
+++ b/vc2013_wx3/SAMnt_vc2013.vcxproj
@@ -33,6 +33,7 @@
     <ClCompile Include="..\src\main.cpp" />
     <ClCompile Include="..\src\object.cpp" />
     <ClCompile Include="..\src\project.cpp" />
+    <ClCompile Include="..\src\ptlayoutctrl.cpp" />
     <ClCompile Include="..\src\simplecurl.cpp" />
     <ClCompile Include="..\src\uiwidgets.cpp" />
     <ClCompile Include="..\src\variables.cpp" />
@@ -50,6 +51,7 @@
     <ClInclude Include="..\src\main.h" />
     <ClInclude Include="..\src\object.h" />
     <ClInclude Include="..\src\project.h" />
+    <ClInclude Include="..\src\ptlayoutctrl.h" />
     <ClInclude Include="..\src\simplecurl.h" />
     <ClInclude Include="..\src\uiwidgets.h" />
     <ClInclude Include="..\src\variables.h" />
