--- a/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
+++ b/vc2013_wx3/SAMnt_vc2013.vcxproj.filters
@@ -71,6 +71,9 @@
     <ClInclude Include="..\src\shadingfactors.h">
       <Filter>Source</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\library.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\welcome.cpp">
@@ -128,6 +131,9 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\shadingfactors.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\library.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
