--- a/osx_wx3/Makefile
+++ b/osx_wx3/Makefile
@@ -14,6 +14,7 @@ CXXFLAGS = $(CFLAGS)
 LDFLAGS = `wx-config-3 --libs` `wx-config-3 --libs aui` `wx-config-3 --libs stc` -lm $(LKLIB) $(WEXLIB) -lstdc++ -lcurl
 
 OBJECTS = ide.o \
+	library.o \
 	basecase.o \
 	ipagelist.o \
 	casewin.o \
